# RL_Webots

./: .gitignore  LICENSE  README.md  build_project.sh  clean_project.sh  env.sh
controllers/: global_parameters.hpp
controllers/khepera_test/: Makefile  khepera_test.cpp
controllers/vpg_controller/: Makefile  vpg_arbitrator.cpp  vpg_arbitrator.hpp  vpg_controller.cpp  vpg_parameters.hpp
libraries/networks/vpg_network/: CMakeLists.txt  build.sh  vpg_episode.cpp  vpg_episode.hpp  vpg_network.cpp  vpg_network.hpp  vpg_wrapper.hpp
libraries/utils/: data_logger.cpp  data_logger.hpp  environment_modifier.cpp_blocked  environment_modifier.hpp_blocked  khepera.cpp  khepera.hpp  reward.cpp  reward.hpp  state.cpp  state.hpp  training_handler.cpp  training_handler.hpp
log_analyzer/: Analyzer.py  vpg_analyzer.py
unit_test/: makefile  vpg_test.cpp
worlds/: empty.wbt  foraging.wbt  learned_obstacle_avoidance.wbt
